Health Checks do not reference CFN export, Shield configure lambda timeout increased to 15 seconds

--- a/code/route53/healthChecks/eip-health-check.yaml
+++ b/code/route53/healthChecks/eip-health-check.yaml
@@ -255,7 +255,7 @@ Resources:
     DependsOn:
       - CalculatedHealthCheck
     Properties:
-      ServiceToken: !ImportValue Route53ShieldProtectionManageLambdaFunctionArn
+      ServiceToken: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:config-proactive-engagement-${AWS::Region}"
       ResourceArn: !Ref resourceArn
       CalculatedHCId: !Ref CalculatedHealthCheck
 Outputs:
