--- a/code/route53/healthChecks/cf-health-check.yaml
+++ b/code/route53/healthChecks/cf-health-check.yaml
@@ -306,7 +306,7 @@ Resources:
     DependsOn:
       - CalculatedHealthCheck
     Properties:
-      ServiceToken: !ImportValue Route53ShieldProtectionManageLambdaFunctionArn
+      ServiceToken: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:config-proactive-engagement-${AWS::Region}"
       ResourceArn: !Ref resourceArn
       CalculatedHCId: !Ref CalculatedHealthCheck
 Outputs:
