--- a/code/route53/healthChecks/nlb-health-check.yaml
+++ b/code/route53/healthChecks/nlb-health-check.yaml
@@ -309,7 +309,7 @@ Resources:
     DependsOn:
       - CalculatedHealthCheck
     Properties:
-      ServiceToken: !ImportValue Route53ShieldProtectionManageLambdaFunctionArn
+      ServiceToken: !Sub "arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:config-proactive-engagement-${AWS::Region}"
       ResourceArn: !Ref resourceId
       CalculatedHCId: !Ref CalculatedHealthCheck
 Outputs:
