--- a/code/shield/enableConfigure/cfn/shield-enable-configure.yaml
+++ b/code/shield/enableConfigure/cfn/shield-enable-configure.yaml
@@ -152,6 +152,7 @@ Resources:
       TracingConfig:
         Mode: Active
       Runtime: python3.9
+      Timeout: 15
       Role: !GetAtt ConfigureShieldLambdaRole.Arn
       Handler: shield/enableConfigure/lambda/index.lambda_handler
       Code:
