--- a/code/fms/fms-security-policy-waf-cloudfront/cfn/fms-security-policy-waf-cloudfront.yaml
+++ b/code/fms/fms-security-policy-waf-cloudfront/cfn/fms-security-policy-waf-cloudfront.yaml
@@ -1,4 +1,36 @@
 AWSTemplateFormatVersion: 2010-09-09
+Metadata:
+  AWS::CloudFormation::Interface:
+    ParameterGroups:
+      - Label:
+          default: "WAF Rule"
+        Parameters:
+          - WAFRuleKey
+          - DefaultAction
+          - WebACLCloudFront
+          - OverrideCustomerWebACL
+      - Label:
+          default: "Policy"
+        Parameters:
+          - PolicyName
+          - AutoRemediate
+      - Label:
+          default: "Accounts and Organization"
+        Parameters:
+          - AccountScopeList
+          - IncludeExcludeScope
+          - OUScopeList
+          - ScopeType
+      - Label:
+          default: "FMS Policy Resource Tagging"
+        Parameters:
+          - ResourceTagUsage
+          - ScopeTagName1
+          - ScopeTagValue1
+          - ScopeTagName2
+          - ScopeTagValue2
+          - ScopeTagName3
+          - ScopeTagValue3
 Parameters:
   WAFRuleKey:
     Type: String
